--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -41,9 +41,10 @@ jobs:
                   "R/app_server.R" = 12:22,
                   "R/run_app.R",
                   "R/ui_utils.R",
-                  "R/mod_data_read.R" = c(155:163, 165:173, 180:184, 190:195),
+                  "R/mod_data_read.R" = c(153:161, 163:171, 178:182, 188:193),
                   "R/mod_global_filters.R" = c(96:97),
-                  "R/mod_data_preview.R" = 63:66
+                  "R/mod_data_preview.R" = 63:66,
+                  "R/mod_dt_table.R = 27:35"
                   )
                 )
                 print(x)
