--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,6 @@ Imports:
     formatters (>= 0.5.0),
     golem (>= 0.4.0),
     purrr (>= 1.0.1),
-    reactable (>= 0.4.4),
     rlang (>= 1.1.0),
     rtables (>= 0.6.1),
     shiny (>= 1.7.4),
@@ -28,16 +27,19 @@ Suggests:
     covr,
     flextable,
     glue,
+    haven,
     knitr,
     lifecycle,
     logger,
     random.cdisc.data,
+    reactable,
     rmarkdown,
     shinycssloaders,
     spelling,
     testthat (>= 3.0.0),
     tibble,
     tidyr,
+    tools,
     waiter,
     withr
 VignetteBuilder: 
