--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -34,6 +34,10 @@ reference:
   contents:
   - has_keyword("helpers")
 
+- title: Example Datasets
+  contents:
+  - has_keyword('datasets')
+
 navbar:
   structure:
     right: [github, linkedin, twitter]
