--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -43,6 +43,11 @@ jobs:
           extra-packages: any::rcmdcheck
           needs: check
 
+      - name: Install Matrix
+        run: |
+          install.packages("Matrix")
+        shell: Rscript {0}
+
       - name: Check
         env:
           _R_CHECK_CRAN_INCOMING_REMOTE_: false
@@ -51,9 +56,6 @@ jobs:
           if (!requireNamespace("rcmdcheck", quietly = TRUE)) install.packages("rcmdcheck")
           options(crayon.enabled = TRUE)
           check_error_on <- "${{ inputs.error-on }}"
-          if (check_error_on == "") {
-            check_error_on <- "note"
-          }
           rcmdcheck::rcmdcheck(
             args = c("--no-manual", "--as-cran"),
             error_on = check_error_on,
